@@ -1,4 +1,4 @@
-.\" RCSid "$Id: gensurf.1,v 1.7 2018/05/04 23:56:49 greg Exp $"
+.\" RCSid "$Id: gensurf.1,v 1.8 2021/04/15 23:51:04 greg Exp $"
 .TH GENSURF 1 11/15/93 RADIANCE
 .SH NAME
 gensurf - generate a RADIANCE or Wavefront description of a curved surface
@@ -121,4 +121,4 @@ The smoothing operation requires that functions be defined
 beyond the [0,1] boundaries of s and t.
 .SH "SEE ALSO"
 genbox(1), genrev(1), genworm(1), icalc(1),
-obj2mesh(1), obj2rad(1), rpict(1), rvu(1), xform(1)
+obj2mesh(1), obj2rad(1), robjutil(1), rpict(1), rvu(1), xform(1)
